# Jino

./: .envrc  CMakeLists.txt  Cargo.toml  README.org  Rakefile  VISION.org  resources.qrc
cmake/: uninstall.cmake.in
data/: jino.desktop
data/themes/: everforest.qss  nightowl.qss  tokyo_night.qss
src/: main.cpp
src/app/: jino_editor.cpp  jino_editor.hpp  menu_manager.cpp  menu_manager.hpp  status_bar_manager.cpp  status_bar_manager.hpp
src/core/: constants.hpp
src/editor/: editor_widget.cpp  editor_widget.hpp  line_number_widget.cpp  line_number_widget.hpp  markdown_syntax_highlighter.cpp  markdown_syntax_highlighter.hpp  org_syntax_highlighter.cpp  org_syntax_highlighter.hpp
src/editor/vim/: vim_handler.cpp  vim_handler.hpp  vim_modes.hpp
